(Hopefully) fix a CSS styling bug on Firefox 41

--- a/getyourdata/static/css/getyourdata.css
+++ b/getyourdata/static/css/getyourdata.css
@@ -149,6 +149,19 @@ img.center {
     margin-bottom: 0.5em;
 }
 
+/* organization list */
+
+#organization-list {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+#organization-list td > a {
+    margin-top: 1em;
+    margin-left: 1em;
+    color: #959595;
+}
+
 .organization-list-filter {
     padding-bottom: 10px;
 }
